--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -857,7 +857,7 @@ span#file-name {
   border: 4px solid rgba(255,255,255,.5);;
 }
 /*
-----------TABS
+----------TABS DASHBOARD
 */
 .nav-tabs {
   position: fixed;
