--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -312,6 +312,13 @@ header ul li img.logo{
 	font-weight: 400;
 	padding: 16px;
 }
+
+.error {
+  font-size: 12px;
+  font-weight: 400;
+  color: #ff7043;
+  padding-top: 2px;
+}
 /*
 ----------MAIN CONTENT
 */
